# ZMpBD_projekt

./: .gitignore  README.md  cleandata.py  docker-compose.yaml  pyproject.toml
backend/: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
backend/src/: api.py  data.py  make_model.py
backend/static/: index.html
model_matcher/: .dockerignore  .gitignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
model_matcher/src/: main.py  make_model.py  predownload_jars.py
