[tool.poetry]
name = "proj"
version = "0.1.0"
description = ""
authors = ["Paweł Pankiewicz <pawelp6020@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.2.0"
ipykernel = "^6.6.1"
pandas = "^1.3.5"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
