[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Paweł Pankiewicz <pawelp6020@gmail.com>"]

[tool.poetry.scripts]
startApi = "src.api:run"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.2.0"
pandas = "^1.3.5"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.1"}
platformdirs = "^2.4.1"
python-decouple = "^3.5"
aioredis = "^2.0.1"
aiokafka = "^0.7.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
ipykernel = "^6.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
